
        * A new component "systemd-battery-check" has been added. It may run
          during early boot (usually in the initrd), and checks the battery
          charge level of the system. In case the charge level is very low the
          user is notified (graphically via Plymouth – if available – as well
          as in text form on the console), and the system is turned off after a
          10s delay.

        * The 'passwdqc' library is now supported as an alternative to the
          'pwquality' library and it can be selected at build time.

        Contributions from: 김인수, 07416, Addison Snelling, Adrian Vovk,
        Aidan Dang, Alexander Krabler, Alfred Klomp, Anatoli Babenia,
        Andrei Stepanov, Andrew Baxter, Antonio Alvarez Feijoo,
        Arian van Putten, Arthur Shau, A S Alam,
        Asier Sarasua Garmendia, Balló György, Bastien Nocera,
        Benjamin Herrenschmidt, Benjamin Raison, Bill Peterson,
        Brad Fitzpatrick, Brett Holman, bri, Chen Qi, Chitoku,
        Christoph Anton Mitterer, Christopher Gurnee, Colin Walters,
        Cornelius Hoffmann, Cristian Rodríguez, cunshunxia, cvlc12,
        Cyril Roelandt, Daan De Meyer, Daniele Medri,
        Daniel P. Berrangé, Dan Streetman, David Edmundson,
        David Schroeder, David Tardon, dependabot[bot],
        Dimitri John Ledkov, Dmitrii Fomchenkov, Dmitry V. Levin, dmkUK,
        Dominique Martinet, don bright, drosdeck, Edson Juliano Drosdeck,
        Egor Ignatov, EinBaum, Emanuele Giuseppe Esposito, Eric Curtin,
        Evgeny Vereshchagin, Florian Klink, Franck Bui, François Rigault,
        Fran Diéguez, Franklin Yu, Frantisek Sumsal, Gaël PORTAY,
        Gerd Hoffmann, Gertalitec, Gibeom Gwon, Gustavo Noronha Silva,
        Hannu Lounento, Hans de Goede, Haochen Tong, HATAYAMA Daisuke,
        Henrik Holst, Hoe Hao Cheng, Igor Tsiglyar, Ivan Vecera,
        James Hilliard, Jan Engelhardt, Jan Janssen, Jan Luebbe,
        Jan Macku, Janne Sirén, jcg, Jeidnx, Joan Bruguera,